--- a/code/pom.xml
+++ b/code/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itaf</groupId>
-		<artifactId>itaf-demo</artifactId>
+		<artifactId>itaf-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>itaf-fish-web</artifactId>
